tests/valid/underscore/let_underscore.facet
fn f(x: unrestricted isize) -> unrestricted isize {
    let _ = x;
    42
}
