tests/invalid/immutable_assign/immutable_let.facet
fn f() -> unrestricted isize {
    let x: unrestricted isize = 10;
    (x = 42);
    x
}
